--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,1 +1,18 @@
-<p>recipe-list works!</p>
+<div class="row">
+  <div class="col-xs-12">
+    <button class="btn btn-success" (click)="onNewRecipe()"> New Recipe </button>
+    <hr>
+
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-xs-12">
+    <app-recipe-item
+    *ngFor="let recipeEl of recipes; let i = index"
+    [recipe]="recipeEl"
+    [index]="i"></app-recipe-item>
+
+  </div>
+</div>
+
